tests/baselines/reference/constructorReturnsInvalidType.errors.txt
==== tests/cases/compiler/constructorReturnsInvalidType.ts (1 errors) ====
    class X {
        constructor() {
            return 1;
                   ~
!!! constructorReturnsInvalidType.ts(3,16): error TS2194: Return type of constructor signature must be assignable to the instance type of the class.
        }
        foo() { }
    }
     
    var x = new X();
    